--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -28,7 +28,7 @@
      
       <p>This is my portfolio.</p>
       <p>About me:</p>
-      <p>Ambition, a passion for learning, an idea person, a fasination for technology; these all define me.
+      <p>Ambition, a passion for learning, an idea person, a fascination for technology; these all define me.
            Right now I'm a rising sophmore studying Computer Engineering at San Jose State University.
            My dream is to work at Google as a software engineer.
            For now I am hoping to publish a few apps I've been longing to make while I learn more about software engineering.        
