image button no longer creates an img tag

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -38,7 +38,7 @@
       <button onclick="addRandomGreeting()">Hello</button>
       <div id="greeting-container"></div>
       <button onclick="randomPic()">One of my favorite photos</button>
-      <div id="pic-container"></div>
+      <img id="favorite-pic" style="display: none;">
     </div>
   </body>
 </html>
