--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -40,5 +40,11 @@
       <button onclick="randomPic()">One of my favorite photos</button>
       <img id="favorite-pic" style="display: none;">
     </div>
+    <form method="POST">
+        <p>Enter some text here:</p>
+        <textarea name="text-input">hello world</textarea>
+        <br/>
+        <input type="submit" />
+    </form>
   </body>
 </html>
