form connects to form-handler servlet

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -40,7 +40,7 @@
       <button onclick="randomPic()">One of my favorite photos</button>
       <img id="favorite-pic" style="display: none;">
     </div>
-    <form method="POST">
+    <form action="/form-handler" method="POST">
         <p>Enter some text here:</p>
         <textarea name="text-input">hello world</textarea>
         <br/>
