--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -46,5 +46,13 @@
         <br/>
         <input type="submit" />
     </form>
+    <footer>
+        <form action="/suggestions" method="POST">
+            <p>Have any suggestions? Drop them below!</p>
+            <textarea name="text-comment">ex. Nice color choices! However, try to have more contrast.</textarea>
+            <br>
+            <input type="submit">
+        </form>
+    </footer>
   </body>
 </html>
