asks for and logs commenters name

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -49,6 +49,11 @@
     <footer>
         <form action="/suggestions" method="POST">
             <p>Have any suggestions? Drop them below!</p>
+            <label>
+                Commenter Name:
+                <input type="text" name="commenter-name">
+            </label>
+            <br>
             <textarea name="text-comment">ex. Nice color choices! However, try to have more contrast.</textarea>
             <br>
             <input type="submit">
