dynamic request to /hello logs and inserts succesful response into page. Also favicon now shows up

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -33,7 +33,8 @@
            My dream is to work at Google as a software engineer.
            For now I am hoping to publish a few apps I've been longing to make while I learn more about software engineering.        
         </p>
-      <p>Click <a href="/hello">here</a> to see content created by server code.</p>
+      <p>Click <a href="/hello">here</a> or <button onclick="doHello()">here</button> to see content created by server code.</p>
+      <p id="dynamicHello"></p>
       <p>Click here to get a random message:</p>
       <button onclick="addRandomGreeting()">Hello</button>
       <div id="greeting-container"></div>
