translates text and insets it into <p> tags

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -62,7 +62,7 @@
     <footer>
         <p>View the page in one of the languages I'm learning</p>
         <button id="en" disabled onclick="translatePage('en')">English</button>
-        <button id="sp" onclick="translatePage('sp')">Spanish</button>
+        <button id="es" onclick="translatePage('es')">Spanish</button>
         <button id="fr" onclick="translatePage('fr')">French</button>
     </footer>
   </body>
