loads and adds comments to the page

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -58,6 +58,8 @@
         <br>
         <input type="submit">
       </form>
+      <button onclick="getPastSuggestions()">See past suggestions</button>
+      <div id="comment-container"></div>
     </div>
     <footer>
         <p>View the page in one of the languages I'm learning</p>
