--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -43,7 +43,7 @@
       <br>
       <form action="/form-handler" method="POST">
         <p>Enter some text here:</p>
-        <textarea name="text-input">hello world</textarea>
+        <textarea name="text-input" placeholder="hello world"></textarea>
         <br/>
         <input type="submit" />
       </form>
@@ -54,7 +54,7 @@
           <input type="text" name="commenter-name">
         </label>
         <br>
-        <textarea name="text-comment">ex. Nice color choices! However, try to have more contrast.</textarea>
+        <textarea name="text-comment" placeholder="ex. Nice color choices! However, try to have more contrast."></textarea>
         <br>
         <input type="submit">
       </form>
